# mqtt_manager

./: .gitmodules  CMakeLists.txt  cmake.cmake  esp32.cmake  zynq.cmake
demo/esp32/: CMakeLists.txt  loggingConfig.h  mqttConfig.h  mqttmngConfig.h  sdkconfig  sdkconfig.old
demo/esp32/main/: CMakeLists.txt  mqttmngConfig.h  station_example_main.c  task_blink.c  task_svmqtt.c  task_svmqtt.h  task_temperature.c  task_temperature.h
demo/esp32/tasks/: CMakeLists.txt  task_blink.c  task_blink.h  task_led.c  task_led.h  task_mqtt_mng.c  task_svmqtt.c  task_svmqtt.h  task_temperature.c
demo/pi-zero-2w/: CMakeLists.txt  loggingConfig.h
demo/pi-zero-2w/threads/: task_led.c
demo/pico/: CMakeLists.txt  FreeRTOSConfig.h  loggingConfig.h  main.c  mqttConfig.h  mqttmngConfig.h
demo/pico/main/: CMakeLists.txt  main.c
demo/pico/main/tasks/: CMakeLists.txt  task_blink.c  task_blink.h  task_led.c  task_mqtt_mng.c  task_temperature.c  task_wiznet_init.c  task_wiznet_init.h
demo/pico/tasks/: CMakeLists.txt  task_blink.c  task_led.c  task_led.h  task_mqtt_mng.c  task_temperature.c  task_temperature.h  task_wiznet_init.c
demo/picow/: CMakeLists.txt  loggingConfig.h  lwipopts.h  lwipopts_examples_common.h  mqttConfig.h  mqttmngConfig.h  picow_demo.c
demo/picow/tasks/: CMakeLists.txt  task_blink.c  task_blink.h  task_led.c  task_mqtt_mng.c  task_mqtt_mng.h  task_svmqtt.c  task_svmqtt.h  task_temperature.c  task_temperature.h  task_wdt.c  task_wdt.h  task_wifi_init.c  task_wifi_init.h
demo/posix/: CMakeLists.txt  main.c  mqttConfig.h  mqttmngConfig.h
demo/posix/threads/: CMakeLists.txt  task_blink.c  task_led.c  task_led.h  task_mqtt_mng.c  task_svmqtt.c  task_svmqtt.h  task_temperature.c
demo/rpi/: CMakeLists.txt  loggingConfig.h  mqttConfig.h  mqttmngConfig.h
demo/rpi/threads/: CMakeLists.txt  task_blink.c  task_led.c  task_mqtt_mng.c  task_mqtt_mng.h  task_temperature.c
demo/simple/: CMakeLists.txt
demo/vsimple/: CMakeLists.txt  demo_config.h  main.c  mqttmng.c  mqttmng.h  mqttmngConfig.h
demo/vsimple/threads/: task_led.c  task_svmqtt.c  task_temperature.c
demo/win/: CMakeLists.txt  loggingConfig.h  main.c  mqttConfig.h
demo/win/threads/: CMakeLists.txt  task_blink.c  task_blink.h  task_mqtt_mng.c  task_temperature.c  task_temperature.h
mqtt_manager/: mqtt.c  mqtt.h  mqttDefs.h  mqttLoggingConfig.h  mqtt_subscription_manager.c  mqtt_subscription_manager.h  mqttmng.c  mqttmng.h  mqttmngLoggingConfig.h
platform/: CMakeLists.txt
platform/clock/: CMakeLists.txt  esp32.cmake  pico.cmake  rpi.cmake  win.cmake
platform/clock/esp32/: CMakeLists.txt  clock_esp32.c
platform/clock/pico/: CMakeLists.txt  clock_pico.c
platform/clock/picow/: CMakeLists.txt  clock_picow.c
platform/clock/posix/: CMakeLists.txt
platform/clock/win/: CMakeLists.txt  clock_win.c
platform/clock/zynq/: clock_zynq.c
platform/transport/: CMakeLists.txt  esp32.cmake  plaintext_transport.c  plaintext_transport.h  sockets_impl.h
platform/transport/esp32/: CMakeLists.txt  sockets_impl.c
platform/transport/linux/: CMakeLists.txt  sockets_impl.c
platform/transport/pico/: CMakeLists.txt  plaintext_transport.c
platform/transport/picow/: CMakeLists.txt  plaintext_transport.c  sockets_impl.c
platform/transport/posix/: CMakeLists.txt
platform/transport/win/: CMakeLists.txt  plaintext_transport.c  sockets_impl.c
platform/transport/zynq/: plaintext_transport.c
subscription_manager/: CMakeLists.txt  mqttmng.c  mqttmng.h
subsmng/: CMakeLists.txt
